Revision history for Perl extension MooseX-Getopt

{{$NEXT}}

0.43      2012-04-29 09:35:52 PDT-0700
 - re-release as non-trial.

0.42-TRIAL 2012-04-15 09:13:05 PDT-0700
 - reformatted the Changes file, with the help of CPAN::Changes, to something
   a little more standard.
 - more release-only tests added

0.41-TRIAL 2012-04-14 18:36:00 PDT-0700
 - Now bails with exit status 0, rather than dying, when printing
   requested --usage/--help information (usage printed via invalid arguments
   will still die, however). (Karen Etheridge)

0.40      2012-04-13
 - Fix tests when MooseX::ConfigFromFile is installed, with
   Getopt::Long::Descriptive >= 0.091. RT#76287
 - Pod fix from debian. Salvatore Bonaccorso <carnil@debian.org> RT#74681
 - Spelling fix from debian. Jonathan Yu <jawnsy@cpan.org> RT#74681

0.39      2012-02-03
 - Fix argument parsing in process_argv when used with ConfigFromFile so
   that -v can be used as expected, rather than being grabbed as --version

0.38      2011-12-23
 - More documentation on Getopt::Long settings and how they alter this
   role's behaviour, in particular with regards to extra_argv capturing.
   (Karen Etheridge)

0.37      2011-03-30
 - Fix missing dependency. (RT#67077)

0.36      2011-03-29
 - Fix dist.ini 'Prereq' into 'Prereqs' (Damien Krotkine)
 - MooseX::Getopt::GLD
   - change it to a MooseX::Role::Parameterized, so that it accepts
     'getopt_conf' parameter (Damien Krotkine)

0.35      2011-02-09
 - Fix missed change from Test::Exception to Test::Fatal

0.34      2011-02-08
 - The test suite now uses Test::Fatal instead of Test::Exception. (Karen
   Etheridge)
 - Move most of new_with_options logic into separate publically accessible
   process_argv method, so that arg processing can be done without actually
   creating object (Jonathan Swartz)

0.33      2010-08-26
 - Remove Test::Most from newly added test (RT#60766)

0.32      2010-08-26
 - Fix handling of Union types (RT#58417)

0.31      2010-07-07